# slack-channel-exporter

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  pytest.ini  slack_user_filter.sh
tests/: __init__.py  test_main.py
