[project]
name = "slack-sdk-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "slack-sdk>=3.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
